# spark-docker-app

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/hr/: app.py  utils.py
tests/: test_hr_app.py
