[metadata]
name = hr
description = A Spark app to calculate the value of Pi.
author = Francisco Ruiz Aguilar
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    hr
install_requires =
    pyspark>=3
    requests>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8==4.0.1
    mypy==0.931
    pyspark==3.2.1
    pytest==7.0.0
    pytest-cov==3.0.0
    pytest-env==0.6.2
    pytest-mock==3.7.0
    pytest-spark==0.6.0
    tox==3.24.5

[options.package_data]
hr = py.typed

[flake8]
max-line-length = 160